commit 5, modified api.yaml for get list of Users and added post. Needs to implement post.
