# src/main/java/com/microservice1/microservice1/api/Microservice1Api.java
@@ -1,67 +1,0 @@
-/**
- * NOTE: This class is auto generated by the swagger code generator program (2.3.1).
- * https://github.com/swagger-api/swagger-codegen
- * Do not edit the class manually.
- */
-package com.microservice1.microservice1.api;
-
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.microservice1.microservice1.model.UsersModel;
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiResponse;
-import io.swagger.annotations.ApiResponses;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-
-import javax.servlet.http.HttpServletRequest;
-import java.io.IOException;
-import java.util.Optional;
-
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-09-24T22:07:10.306-05:00")
-
-@Api(value = "microservice1", description = "the microservice1 API")
-public interface Microservice1Api {
-
-    Logger log = LoggerFactory.getLogger(Microservice1Api.class);
-
-    default Optional<ObjectMapper> getObjectMapper() {
-        return Optional.empty();
-    }
-
-    default Optional<HttpServletRequest> getRequest() {
-        return Optional.empty();
-    }
-
-    default Optional<String> getAcceptHeader() {
-        return getRequest().map(r -> r.getHeader("Accept"));
-    }
-
-    @ApiOperation(value = "Get all users", nickname = "getAvailableUsers", notes = "Get all users", response = UsersModel.class, tags={ "microservice 1 test", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Successful operation", response = UsersModel.class),
-        @ApiResponse(code = 404, message = "Incorrect data input") })
-    @RequestMapping(value = "/microservice1/users/",
-        produces = { "application/json" }, 
-        method = RequestMethod.GET)
-    default ResponseEntity<UsersModel> getAvailableUsers() {
-        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
-            if (getAcceptHeader().get().contains("application/json")) {
-                try {
-                    return new ResponseEntity<>(getObjectMapper().get().readValue("{  \"users\" : [ {    \"name\" : \"name\",    \"id\" : 800828191,    \"salary\" : 6027456182  }, {    \"name\" : \"name\",    \"id\" : 800828191,    \"salary\" : 6027456182  } ]}", UsersModel.class), HttpStatus.NOT_IMPLEMENTED);
-                } catch (IOException e) {
-                    log.error("Couldn't serialize response for content type application/json", e);
-                    return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
-                }
-            }
-        } else {
-            log.warn("ObjectMapper or HttpServletRequest not configured in default Microservice1Api interface so no example is generated");
-        }
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-    }
-
-}
